Basic image upload works

--- a/Version4Nemesys/Version4Nemesys.csproj
+++ b/Version4Nemesys/Version4Nemesys.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Sendgrid" Version="9.11.0" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\UploadedImages\" />
+  </ItemGroup>
+
 </Project>
