My File changes

--- a/Version4Nemesys/appsettings.json
+++ b/Version4Nemesys/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-5VJLPLSK\\SQLSERVER;Database=NMARSv4;User Id=sa;Password=1234rewq;"
+    "DefaultConnection": "Server=DESKTOP-B3G9KSC\\AZALEASQLSERVER;Database=NMARS;User Id=sa;Password=password123;"
   },
   "Logging": {
     "LogLevel": {
