--- a/Version4Nemesys/Version4Nemesys.csproj
+++ b/Version4Nemesys/Version4Nemesys.csproj
@@ -6,6 +6,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20190518102108_ModifiedVoting.cs" />
+    <Compile Remove="Data\Migrations\20190518102108_ModifiedVoting.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
